# drf

./: .env.exemples  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  users.json
config/: settings.py  urls.py
materials/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_url_video.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscribe.py  0006_alter_subscribe_course_alter_subscribe_user.py  0007_course_updated_at.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_pay_method.py  0004_alter_payment_pay_method.py  0005_alter_payment_pay_method.py  0006_rename_sum_payment_amount_payment_link_and_more.py
