[tool.poetry]
name = "drf-hw"
version = "0.1.0"
description = ""
authors = ["Ramzes_13 <rslobolinsky13@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
asgiref = "^3.8.1"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlparse = "^0.5.0"
asttokens = "^2.4.1"
decorator = "^5.1.1"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.25.0"
executing = "^2.0.1"
jedi = "^0.19.1"
matplotlib-inline = "^0.1.7"
parso = "^0.8.4"
pexpect = "^4.9.0"
prompt-toolkit = "^3.0.47"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pygments = "^2.18.0"
pyjwt = "^2.8.0"
six = "^1.16.0"
stack-data = "^0.6.3"
traitlets = "^5.14.3"
typing-extensions = "^4.12.2"
wcwidth = "^0.2.13"
drf-yasg = "^1.21.7"
inflection = "^0.5.1"
packaging = "^24.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
stripe = "^10.1.0"
urllib3 = "^2.2.2"
requests = "^2.32.3"
idna = "^3.7"
certifi = "^2024.6.2"
charset-normalizer = "^3.3.2"
celery = "^5.4.0"
setuptools = "^70.2.0"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
